# neurocorgi_sdk

./: .gitignore  Dockerfile  README.md  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: question.yaml
.github/workflows/: ci.yaml  codeql.yaml  publish_pypi.yaml
docker/: Dockerfile  Dockerfile-cpu  Dockerfile-n2d2
docs/: README.md
examples/: Ants_Bees.ipynb  Cifar100_Transfer.ipynb  Imagenet.ipynb  tutorial.ipynb
examples/classification/: Ants_Bees.ipynb  Cifar100.ipynb  ImageNet.ipynb
neurocorgi_sdk/: __init__.py  transforms.py
neurocorgi_sdk/models/: __init__.py  mobilenetv1_quant.py  neurocorginet.py  neurocorginet_fq.py  neurocorginet_torch.py
neurocorgi_sdk/models/classification/: imagenet.py
neurocorgi_sdk/models/n2d2/: __init__.py  mobilenetv1_quant.py  ncnet_n2d2.py  ncnet_n2d2_torch.py
neurocorgi_sdk/utils/: __init__.py  checks.py
tests/: test_model.py
tools/: README.md  build_neurocorgi_onnx.py
